--- a/firehose-solana.yaml
+++ b/firehose-solana.yaml
@@ -1,11 +1,11 @@
 start:
   args:
-  - reader-node
-  - merger
-  - relayer
-  - firehose
-  - substreams-tier1
-  - substreams-tier2
+    - reader-node
+    - merger
+    - relayer
+    - firehose
+    - substreams-tier1
+    - substreams-tier2
   flags:
     common-first-streamable-block: 1
     reader-node-path: "firesol"
@@ -18,3 +18,4 @@ start:
       ./firehose-data/reader/data
     substreams-tier1-block-type: "sf.solana.type.v1.Block"
     substreams-tier1-grpc-listen-addr: :9000
+    ignore-advertise-validation: true
